Implemented inventory management

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/public/user/assets/css/bootstrap.min.css">
     <!-- Fontawesome -->
     <link rel="stylesheet" href="/public/user/assets/css/font-awesome.min.css">
+    
     <!-- Fontawesome Star -->
     <link rel="stylesheet" href="/public/user/assets/css/fontawesome-stars.css">
     <!-- Ion Icon -->
@@ -38,6 +39,10 @@
 
     <!-- Add this in your head tag -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/elevatezoom/2.2.3/jquery.elevatezoom.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- sweet alert -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
