--- a/views/user/orderdetails.ejs
+++ b/views/user/orderdetails.ejs
@@ -191,13 +191,9 @@
 
         <div class="order-actions-section">
           <a href="/orders" class="btn-back">Back to Orders</a>
-          <button
-            id="cancelOrderBtn"
-            data-order-id="<%= order._id %>"
-            class="btn-back"
-          >
-            Cancel Order
-          </button>
+          <button class="cancel-order-btn" data-order-id="<%= order._id %>" class="btn-back">
+  Cancel Order
+</button>
           <a href="#" class="btn-back">Contact Support</a>
         </div>
       </div>
